Fixing bugs on IE 11
Rendering SVG icons and links clickable

--- a/app/styles/menuPage.css
+++ b/app/styles/menuPage.css
@@ -57,18 +57,16 @@
   color: white;
 }
 
-.trends_button_style {
+.white_color {
   color: white !important;
 }
 
+.inline {
+  display: inline !important;
+}
 .menu_style {
   background-color: #3f51b5 !important;
   z-index: 10;
-}
-
-.menu_anchor_style{
-  position: absolute !important;
-  right: 10em !important;
 }
 
 .button_style {
